--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: aktas
-description: "aktas'ın mekanı"
+description: "Reverse Engineering & Malware Analysis Blog"
 author:
   name: "aktas"
   email: "aktsalper@protonmail.com"
